modify straddle strategy

--- a/notebooks/team2/vanessa/Indicator_Base/straddle-strategy.ipynb
+++ b/notebooks/team2/vanessa/Indicator_Base/straddle-strategy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,8 @@
      "output_type": "stream",
      "text": [
       "Starting Portfolio Value: 100000.00\n",
-      "Final Portfolio Value: 100053.82\n"
+      "Final Portfolio Value: 100070.87\n",
+      "Final Portfolio Value (adjusted): 100001.39\n"
      ]
     }
    ],
@@ -221,8 +222,7 @@
     "        size = self.position.size\n",
     "        \n",
     "        if(not size):\n",
-    "            if self.rsi_oversold[0] > 0:\n",
-    "#             if self.bollinger_breakdown[0] > 0:\n",
+    "            if self.rsi_overbought[0] > 0:\n",
     "                # replicate straddle payout less premium\n",
     "#                 print(\"Indicator triggered...entering position\")\n",
     "#                 print('Exit price %.2f enter price %.2f' % (self.stock_px_exit[0], self.stock_px_enter[0]))\n",
@@ -247,13 +247,13 @@
     "    # Create a cerebro entity\n",
     "    cerebro = bt.Cerebro()\n",
     "    \n",
-    "    asset = 'MSFT'\n",
+    "    asset = 'YHOO'\n",
     "    n_lags = 8 \n",
     "    \n",
     "    # Read in stock and vol data \n",
     "    datapath_vol = os.path.join('../../../../datas/%s.csv' % asset) \n",
-    "    datapath_stock = os.path.join('../../../../datas/%s-2010-2018.csv' % asset)\n",
-    "#     datapath_stock = os.path.join('../../../../datas/yhoo-1996-2015.txt')\n",
+    "#     datapath_stock = os.path.join('../../../../datas/%s-2010-2018.csv' % asset)\n",
+    "    datapath_stock = os.path.join('../../../../datas/yhoo-1996-2015.txt')\n",
     "    data_vol = pd.read_csv(datapath_vol, parse_dates=True,index_col=0)\n",
     "    data_stock = pd.read_csv(datapath_stock, parse_dates=True,index_col=0)\n",
     "    \n",
@@ -289,7 +289,7 @@
     "    cerebro.broker.setcash(100000.0)\n",
     "\n",
     "    # Write output\n",
-    "    cerebro.addwriter(bt.WriterFile, out='MSFT-RSI-OS.csv',csv=True)\n",
+    "    cerebro.addwriter(bt.WriterFile, out='YHOO-RSI-OB.csv',csv=True)\n",
     "    \n",
     "    # Print out the starting conditions\n",
     "    print('Starting Portfolio Value: %.2f' % cerebro.broker.getvalue())\n",
@@ -298,32 +298,49 @@
     "    cerebro.run()\n",
     "\n",
     "    # Print out the final result\n",
-    "    print('Final Portfolio Value: %.2f' % cerebro.broker.getvalue())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print('Final Portfolio Value: %.2f' % cerebro.broker.getvalue())\n",
+    "\n",
     "# Adjust the portfolio value for straddle premium\n",
-    "filename = \"MSFT-RSI-OS.csv\"\n",
+    "filename = \"YHOO-RSI-OB.csv\"\n",
     "date_ind = 12\n",
     "df_data = sc.read_data(\"csv\",filename,date_ind)\n",
     "\n",
     "buy_ind = \"buy\"\n",
     "sell_ind = \"sell\"\n",
-    "strad_ind = \"close.6\"\n",
+    "strad_ind = \"close.8\"\n",
     "stock_ind = \"stockpx.1\"\n",
     "port_ind = \"value\"\n",
     "df_data_adj = sc.get_straddle_adjusted_value(df_data,buy_ind,sell_ind,strad_ind,stock_ind,port_ind)\n",
-    "df_data_adj.head()\n",
+    "print('Final Portfolio Value (adjusted): %.2f' % df_data_adj[\"Value including Premium\"][-1])\n",
     "\n",
     "output_dir = \"\"\n",
     "# filename_output = filename+\"_adj\"\n",
-    "sc.export_data(df_data_adj,\"csv\",output_dir,\"MSFT-RSI-OS-adj\")\n",
-    "# sc.export_data(df_data_adj,\"excel\",output_dir,\"straddle_indicators_adj\")"
+    "sc.export_data(df_data_adj,\"excel\",output_dir,\"YHOO-RSI-OB-adj\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "YHOO-TSI-OB\n",
+    "\n",
+    "Final Portfolio Value: 100123.33\n",
+    "Final Portfolio Value (adjusted): 100006.66\n",
+    "\n",
+    "MSFT-TSI-OB\n",
+    "\n",
+    "Final Portfolio Value: 100161.60\n",
+    "Final Portfolio Value (adjusted): 100012.09\n",
+    "\n",
+    "AAPL-TSI-OB\n",
+    "\n",
+    "Final Portfolio Value: 100427.43\n",
+    "Final Portfolio Value (adjusted): 99105.84\n",
+    "\n",
+    "YHOO-RSI-OB\n",
+    "\n",
+    "Final Portfolio Value: 100070.87\n",
+    "Final Portfolio Value (adjusted): 100001.39"
    ]
   },
   {
