--- a/notebooks/team2/vanessa/Indicator_Base/strategy-options-template.ipynb
+++ b/notebooks/team2/vanessa/Indicator_Base/strategy-options-template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Starting Portfolio Value: 100000.00\n",
-      "Final Portfolio Value: 100063.23\n"
+      "Final Portfolio Value: 100061.40\n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
     "        size = self.position.size\n",
     "        \n",
     "        if(not size):\n",
-    "            if self.uo_overbought[0] > 0:\n",
+    "            if self.rsi_oversold[0] > 0:\n",
     "#             if self.bollinger_breakdown[0] > 0:\n",
     "                # replicate straddle payout less premium\n",
     "#                 print(\"Indicator triggered...entering position\")\n",
@@ -247,7 +247,7 @@
     "    # Create a cerebro entity\n",
     "    cerebro = bt.Cerebro()\n",
     "    \n",
-    "    asset = 'MSFT'\n",
+    "    asset = 'YHOO'\n",
     "    n_lags = 6 \n",
     "    \n",
     "    # Read in stock and vol data \n",
@@ -277,19 +277,19 @@
     "        cerebro.adddata(bt.feeds.PandasData(dataname=data), name=symbol)\n",
     "    \n",
     "    # Add straddle premium\n",
-    "    data = data_vol[['iv30']]\n",
+    "    data = data_vol[['10dORHV']]\n",
     "    data.columns = [\"Close\"]\n",
-    "    cerebro.adddata(bt.feeds.PandasData(dataname=data), name='iv30')\n",
+    "    cerebro.adddata(bt.feeds.PandasData(dataname=data), name='10dORHV')\n",
     "    \n",
     "    # Add a strategy\n",
-    "    symbol_cols = ['stockpx'] + symbol_cols + ['iv30']\n",
+    "    symbol_cols = ['stockpx'] + symbol_cols + ['10dORHV']\n",
     "    cerebro.addstrategy(TestStrategy, symbols=symbol_cols)\n",
     "\n",
     "    # Set our desired cash start\n",
     "    cerebro.broker.setcash(100000.0)\n",
     "\n",
     "    # Write output\n",
-    "    cerebro.addwriter(bt.WriterFile, out='MSFT-indicators.csv',csv=True)\n",
+    "    cerebro.addwriter(bt.WriterFile, out='YHOO-indicators.csv',csv=True)\n",
     "    \n",
     "    # Print out the starting conditions\n",
     "    print('Starting Portfolio Value: %.2f' % cerebro.broker.getvalue())\n",
