--- a/notebooks/team2/vanessa/Indicator_Base/Stats_Collector.ipynb
+++ b/notebooks/team2/vanessa/Indicator_Base/Stats_Collector.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
     "# input directory path\n",
     "# input_dir = \"/Users/lishuo/Desktop/NYU_Academics/NYU_Spring_2018/Capstone Project/After_First_Presentation/Sample_Assets/\"\n",
     "# file name\n",
-    "filename1 = \"MSFT-indicators.csv\"\n",
+    "filename1 = \"YHOO-indicators.csv\"\n",
     "# read data, need specify the file type as the first argument. NOTE: ONLY csv or excel are valid!\n",
     "# df_yhoo_rv10 = sc.read_data(\"csv\",input_dir+filename1,date_ind)\n",
     "df_msft_rv10 = sc.read_data(\"csv\",filename1,date_ind)"
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -91,10 +91,10 @@
     "target_stats = [\"mean\"]\n",
     "#---------------------------------------\n",
     "# specify the minimum useful day intervals. \n",
-    "n_value = [3]\n",
+    "n_value = [1]\n",
     "#---------------------------------------\n",
     "# specify day intervals you want to look at.\n",
-    "target_day_interval = [5,10,20,30]\n",
+    "target_day_interval = [5,10]\n",
     "#---------------------------------------\n",
     "# specify minimum change\n",
     "min_chg = 0.1\n",
@@ -111,7 +111,7 @@
     "# higher than 1.3 or lower than 0.7\n",
     "\n",
     "output_dir = \"\"\n",
-    "output_file_name = \"MSFT-stats\"\n",
+    "output_file_name = \"YHOO-stats\"\n",
     "sc.export_summary_table(day_interval,df_msft_rv10,signal_list,\"close.6\",output_dir,output_file_name,\n",
     "                    target_stats,target_day_interval,n_dict,min_chg)\n",
     "\n",
