--- a/notebooks/team1/kelvin/research/Week5_Regime_Trading_Backtest_Train_v1.ipynb
+++ b/notebooks/team1/kelvin/research/Week5_Regime_Trading_Backtest_Train_v1.ipynb
@@ -960,6 +960,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a Stratey\n",
+    "class AStrategy(bt.Strategy):\n",
+    "    params = (\n",
+    "        ('period_BB', 15),\n",
+    "        ('devfactor', 1.2),\n",
+    "        ('movav', bt.indicators.SimpleMovingAverage)\n",
+    "    )\n",
+    "\n",
+    "    def log(self, txt, dt=None):\n",
+    "        ''' Logging function fot this strategy'''\n",
+    "        dt = dt or self.datas[0].datetime.date(0)\n",
+    "        print('%s, %s' % (dt.isoformat(), txt))\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        # Keep a reference to the \"close\" line in the data[0] dataseries\n",
+    "        self.dataclose = self.datas[0].date\n",
+    "        \n",
+    "    def notify_order(self, order):\n",
+    "        if order.status in [order.Submitted, order.Accepted]:\n",
+    "            # Buy/Sell order submitted/accepted to/by broker - Nothing to do\n",
+    "            return\n",
+    "\n",
+    "        # Check if an order has been completed\n",
+    "        # Attention: broker could reject order if not enough cash\n",
+    "        if order.status in [order.Completed]:\n",
+    "            if order.isbuy():\n",
+    "                self.log('BUY EXECUTED, %.2f' % order.executed.price)\n",
+    "            elif order.issell():\n",
+    "                self.log('SELL EXECUTED, %.2f' % order.executed.price)\n",
+    "\n",
+    "            self.bar_executed = len(self)\n",
+    "\n",
+    "        elif order.status in [order.Canceled, order.Margin, order.Rejected]:\n",
+    "            self.log('Order Canceled/Margin/Rejected')\n",
+    "\n",
+    "        # Write down: no pending order\n",
+    "        self.order = None\n",
+    "\n",
+    "\n",
+    "    def next(self):\n",
+    "        # Simply log the closing price of the series from the reference\n",
+    "        self.log('Close, %.2f ; Position %f' % (self.dataclose[0],self.dataclose[0],self.position.size))\n",
+    "        \n",
+    "        # Check if an order is pending ... if yes, we cannot send a 2nd one\n",
+    "        if self.order:\n",
+    "            return\n",
+    "\n",
+    "        # Check if we are in the market\n",
+    "        if not self.position:\n",
+    "            #Open position\n",
+    "\n",
+    "            # Not yet ... we MIGHT BUY if ...\n",
+    "            if self.dataclose[0] <= self.botband[0]:\n",
+    "\n",
+    "                # BUY, BUY, BUY!!! (with all possible default parameters)\n",
+    "                self.log('BUY CREATE, %.2f' % self.dataclose[0])\n",
+    "\n",
+    "                # Keep track of the created order to avoid a 2nd order\n",
+    "                self.order = self.buy()\n",
+    "\n",
+    "            if self.dataclose[0] >= self.topband[0]:\n",
+    "                # SELL, SELL, SELL!!! (with all possible default parameters)\n",
+    "                self.log('SELL CREATE, %.2f' % self.dataclose[0])\n",
+    "\n",
+    "                # Keep track of the created order to avoid a 2nd order\n",
+    "                self.order = self.sell()\n",
+    "\n",
+    "        #Exit position\n",
+    "        elif self.position.size>0:\n",
+    "            #Exit the long position\n",
+    "            if self.dataclose[0] > self.midband[0]:\n",
+    "                # SELL, SELL, SELL!!! (with all possible default parameters)\n",
+    "                self.log('[Exit]SELL CREATE, %.2f' % self.dataclose[0])\n",
+    "\n",
+    "                # Keep track of the created order to avoid a 2nd order\n",
+    "                self.order = self.sell()\n",
+    "                \n",
+    "        elif self.position.size<0:\n",
+    "            #Exit the short position\n",
+    "            if self.dataclose[0] < self.midband[0]:\n",
+    "                \n",
+    "                self.log('[Exit]BUY CREATE, %.2f' % self.dataclose[0])\n",
+    "\n",
+    "                # Keep track of the created order to avoid a 2nd order\n",
+    "                self.order = self.buy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -1415,13 +1508,7 @@
       "2014-06-24, Close, 1949.98 ; Position -1.000000\n",
       "2014-06-25, Close, 1959.53 ; Position -1.000000\n",
       "2014-06-26, Close, 1957.22 ; Position -1.000000\n",
-      "2014-06-27, Close, 1960.96 ; Position -1.000000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2014-06-27, Close, 1960.96 ; Position -1.000000\n",
       "2014-06-30, Close, 1960.23 ; Position -1.000000\n",
       "2014-07-01, Close, 1973.32 ; Position -1.000000\n",
       "2014-07-02, Close, 1974.62 ; Position -1.000000\n",
@@ -2015,13 +2102,7 @@
       "2016-03-21, Close, 2051.60 ; Position -1.000000\n",
       "2016-03-22, Close, 2049.80 ; Position -1.000000\n",
       "2016-03-23, Close, 2036.71 ; Position -1.000000\n",
-      "2016-03-24, Close, 2035.94 ; Position -1.000000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2016-03-24, Close, 2035.94 ; Position -1.000000\n",
       "2016-03-28, Close, 2037.05 ; Position -1.000000\n",
       "2016-03-29, Close, 2055.01 ; Position -1.000000\n",
       "2016-03-30, Close, 2063.95 ; Position -1.000000\n",
@@ -2623,13 +2704,7 @@
       "2018-01-31, Close, 2823.81 ; Position -1.000000\n",
       "2018-02-01, Close, 2821.98 ; Position -1.000000\n",
       "2018-02-02, Close, 2762.13 ; Position -1.000000\n",
-      "2018-02-02, [Exit]BUY CREATE, 2762.13\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2018-02-02, [Exit]BUY CREATE, 2762.13\n",
       "2018-02-05, BUY EXECUTED, 2741.06\n",
       "2018-02-05, Close, 2648.94 ; Position 0.000000\n",
       "2018-02-05, BUY CREATE, 2648.94\n",
@@ -2668,7 +2743,7 @@
     "cerebro.broker.setcash(10000.0)\n",
     "\n",
     "# Write output\n",
-    "cerebro.addwriter(bt.WriterFile, out='mr.csv',csv=True)\n",
+    "# cerebro.addwriter(bt.WriterFile, out='mr.csv',csv=True)\n",
     "\n",
     "# Print out the starting conditions\n",
     "print('Starting Portfolio Value: %.2f' % cerebro.broker.getvalue())\n",
