--- a/notebooks/team1/kelvin/research/Week5_Regime_Trading_Backtest_Train_v3_RF.ipynb
+++ b/notebooks/team1/kelvin/research/Week5_Regime_Trading_Backtest_Train_v3_RF.ipynb
@@ -75,10 +75,12 @@
    "metadata": {},
    "source": [
     "## Momentum Strategy\n",
-    "Enter if the macd line crosses the signal line to the upside and a control Simple Moving Average has had a net negative direction in the last x periods (current SMA value below the value x periods ago)        \n",
-    "Set a stop price N x ATR times away from the close price                          \n",
-    "Exit the market if the close price goes below the stop price            \n",
-    "If still in the market, update the stop price only if it’s greater than the actual one       "
+    "* Long if the macd line crosses the signal line to the upside and a control Simple Moving Average has had a net negative direction in the last x periods (current SMA value below the value x periods ago) and set a stop price N x ATR times away from the close price.\n",
+    "  Close the position if the close price goes below the stop price            \n",
+    "  If still in the market, update the stop price only if it’s greater than the actual one.\n",
+    "* Short if the macd line crosses the signal line to the downside and a control Simple Moving Average has had a net positive direction in the last x periods (current SMA value below the value x periods ago) and set a stop price N x ATR times away from the close price.\n",
+    "Close the position if the close price goes beyond the stop price            \n",
+    "If still in the market, update the stop price only if it’s smaller than the actual one.     "
    ]
   },
   {
@@ -6037,7 +6039,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mean-Reversion Strategy"
+    "## Mean-Reversion Strategy\n",
+    "Compute Bollinger Band\n",
+    "* long if price crosses over Upper Band.\n",
+    "Close if price crosses down below Middle Band.\n",
+    "* short if price crosses down below Upper Band.\n",
+    "Close if price crosses from below Middle Band."
    ]
   },
   {
