--- a/notebooks/team1/lini/Simple_momentum.ipynb
+++ b/notebooks/team1/lini/Simple_momentum.ipynb
@@ -55,6 +55,8 @@
     "        # Keep a reference to the \"close\" line in the data[0] dataseries\n",
     "        self.dataclose = self.datas[0].close\n",
     "        self.dataopen = self.datas[0].open\n",
+    "        self.sma = bt.indicators.SimpleMovingAverage(\n",
+    "            self.datas[0], period=self.params.period)\n",
     "       \n",
     "        \n",
     "    def avg_return(self, n):\n",
