--- a/notebooks/team1/lini/0402-Backtesting.ipynb
+++ b/notebooks/team1/lini/0402-Backtesting.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,13 @@
       "2014-03-14, regime = momentum,       CREATE SELL for XLE XLP XLF,  BUY  for XLE XLP XLF\n",
       "2014-03-17, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
       "2014-03-18, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
-      "2014-03-19, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
+      "2014-03-19, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2014-03-20, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
       "2014-03-21, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
       "2014-03-24, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
@@ -478,13 +484,7 @@
       "2014-04-08, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
       "2014-04-09, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
       "2014-04-10, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
-      "2014-04-11, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2014-04-11, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
       "2014-04-11, regime = momentum,       CLOSE Position  XLB XLE XLF,  and for  XLP XLU XLV\n",
       "2014-04-14, regime = momentum,       HAS Position at ,  and  at  \n",
       "2014-04-14, regime = momentum,       CREATE SELL for XLY XLF XLE,  BUY  for XLY XLF XLE\n",
@@ -638,7 +638,13 @@
       "2014-10-27, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n",
       "2014-10-28, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n",
       "2014-10-29, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n",
-      "2014-10-30, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n",
+      "2014-10-30, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2014-10-31, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n",
       "2014-11-03, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n",
       "2014-11-04, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n",
@@ -665,13 +671,7 @@
       "2014-12-01, regime = momentum,       HAS Position at ,  and  at  \n",
       "2014-12-01, regime = momentum,       CREATE SELL for XLE XLB XLI,  BUY  for XLE XLB XLI\n",
       "2014-12-02, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n",
-      "2014-12-03, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2014-12-03, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n",
       "2014-12-04, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n",
       "2014-12-05, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n",
       "2014-12-08, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLV\n",
@@ -814,7 +814,13 @@
       "2015-06-09, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLU XLV XLY\n",
       "2015-06-09, regime = momentum,       CLOSE Position  XLB XLE XLI,  and for  XLU XLV XLY\n",
       "2015-06-10, regime = momentum,       HAS Position at ,  and  at  \n",
-      "2015-06-10, regime = momentum,       CREATE SELL for XLU XLI XLP,  BUY  for XLU XLI XLP\n",
+      "2015-06-10, regime = momentum,       CREATE SELL for XLU XLI XLP,  BUY  for XLU XLI XLP\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2015-06-11, regime = momentum,       HAS Position at XLI XLK XLP,  and  at  XLU XLV XLY\n",
       "2015-06-12, regime = momentum,       HAS Position at XLI XLK XLP,  and  at  XLU XLV XLY\n",
       "2015-06-15, regime = momentum,       HAS Position at XLI XLK XLP,  and  at  XLU XLV XLY\n",
@@ -854,13 +860,7 @@
       "2015-07-30, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLU XLV XLY\n",
       "2015-07-31, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLU XLV XLY\n",
       "2015-08-03, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLU XLV XLY\n",
-      "2015-08-04, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLU XLV XLY\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2015-08-04, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLU XLV XLY\n",
       "2015-08-05, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLU XLV XLY\n",
       "2015-08-06, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLU XLV XLY\n",
       "2015-08-07, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLU XLV XLY\n",
@@ -985,7 +985,13 @@
       "2015-12-29, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
       "2015-12-30, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
       "2015-12-31, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
-      "2016-01-04, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
+      "2016-01-04, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2016-01-05, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
       "2016-01-06, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
       "2016-01-07, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
@@ -1033,13 +1039,7 @@
       "2016-02-26, regime = mean reversion,       HAS Position at XLE XLF XLK,  and  at  XLP XLU XLV\n",
       "2016-02-26, regime = mean reversion,       CLOSE Position  XLE XLF XLK,  and for  XLP XLU XLV\n",
       "2016-02-29, regime = mean reversion,       HAS Position at ,  and  at  \n",
-      "2016-02-29, regime = mean reversion, CREATE BUY  for XLF XLE XLV,  SELL for XLF XLE XLV\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2016-02-29, regime = mean reversion, CREATE BUY  for XLF XLE XLV,  SELL for XLF XLE XLV\n",
       "2016-03-01, regime = mean reversion,       HAS Position at XLB XLE XLF,  and  at  XLI XLU XLV\n",
       "2016-03-02, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLU XLV\n",
       "2016-03-02, regime = momentum, CLOSE Position  XLB XLE XLF,  and for  XLI XLU XLV\n",
@@ -1110,7 +1110,13 @@
       "2016-05-20, regime = momentum,       HAS Position at XLE XLK XLP,  and  at  XLU XLV XLY\n",
       "2016-05-20, regime = momentum, CLOSE Position  XLE XLK XLP,  and for  XLU XLV XLY\n",
       "2016-05-23, regime = momentum,       HAS Position at ,  and  at  \n",
-      "2016-05-23, regime = momentum,       CREATE SELL for XLF XLY XLK,  BUY  for XLF XLY XLK\n",
+      "2016-05-23, regime = momentum,       CREATE SELL for XLF XLY XLK,  BUY  for XLF XLY XLK\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2016-05-24, regime = momentum,       HAS Position at XLB XLF XLK,  and  at  XLP XLU XLY\n",
       "2016-05-25, regime = momentum,       HAS Position at XLB XLF XLK,  and  at  XLP XLU XLY\n",
       "2016-05-26, regime = momentum,       HAS Position at XLB XLF XLK,  and  at  XLP XLU XLY\n",
@@ -1199,13 +1205,7 @@
       "2016-09-09, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLY\n",
       "2016-09-12, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLY\n",
       "2016-09-13, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLY\n",
-      "2016-09-14, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLY\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2016-09-14, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLY\n",
       "2016-09-15, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLY\n",
       "2016-09-16, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLY\n",
       "2016-09-19, regime = mean reversion,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLY\n",
@@ -1282,7 +1282,13 @@
       "2016-12-12, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLP XLU XLV\n",
       "2016-12-13, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLP XLU XLV\n",
       "2016-12-14, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLP XLU XLV\n",
-      "2016-12-15, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLP XLU XLV\n",
+      "2016-12-15, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLP XLU XLV\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2016-12-16, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLP XLU XLV\n",
       "2016-12-19, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLP XLU XLV\n",
       "2016-12-20, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLP XLU XLV\n",
@@ -1382,13 +1388,7 @@
       "2017-04-21, regime = momentum,       HAS Position at ,  and  at  \n",
       "2017-04-21, regime = momentum,       CREATE SELL for XLE XLV XLP,  BUY  for XLE XLV XLP\n",
       "2017-04-24, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
-      "2017-04-25, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2017-04-25, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
       "2017-04-26, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
       "2017-04-27, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
       "2017-04-28, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
@@ -1456,7 +1456,13 @@
       "2017-07-17, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
       "2017-07-18, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
       "2017-07-19, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
-      "2017-07-20, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
+      "2017-07-20, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2017-07-21, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
       "2017-07-24, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
       "2017-07-25, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
@@ -1566,13 +1572,7 @@
       "2017-12-05, regime = momentum,       HAS Position at ,  and  at  \n",
       "2017-12-05, regime = momentum,       CREATE SELL for XLP XLU XLY,  BUY  for XLP XLU XLY\n",
       "2017-12-06, regime = momentum,       HAS Position at XLB XLF XLI,  and  at  XLP XLU XLY\n",
-      "2017-12-07, regime = momentum,       HAS Position at XLB XLF XLI,  and  at  XLP XLU XLY\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2017-12-07, regime = momentum,       HAS Position at XLB XLF XLI,  and  at  XLP XLU XLY\n",
       "2017-12-08, regime = momentum,       HAS Position at XLB XLF XLI,  and  at  XLP XLU XLY\n",
       "2017-12-11, regime = momentum,       HAS Position at XLB XLF XLI,  and  at  XLP XLU XLY\n",
       "2017-12-12, regime = momentum,       HAS Position at XLB XLF XLI,  and  at  XLP XLU XLY\n",
