--- a/notebooks/team2/lily/Stats_Collector_Example.ipynb
+++ b/notebooks/team2/lily/Stats_Collector_Example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -41,11 +41,11 @@
     "First read data\n",
     "'''\n",
     "# specify date column index (index starts from 0)\n",
-    "date_ind = 3\n",
+    "date_ind = 12\n",
     "# input directory path\n",
-    "input_dir = \"~/workspace/backtrader/datas/\"\n",
+    "input_dir = \"~/workspace/backtrader/notebooks/team2/lily/\"\n",
     "# file name\n",
-    "filename1 = \"APPL_trend_indicators.csv\"\n",
+    "filename1 = \"indicators_stat.csv\"\n",
     "# read data, need specify the file type as the first argument. NOTE: ONLY csv or excel are valid!\n",
     "df_yhoo_rv10 = sc.read_data(\"csv\",input_dir+filename1,date_ind)"
    ]
@@ -74,16 +74,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/project/anaconda3/lib/python3.6/site-packages/numpy/lib/function_base.py:1128: RuntimeWarning: Mean of empty slice.\n",
-      "  avg = a.mean(axis)\n",
-      "/home/project/anaconda3/lib/python3.6/site-packages/numpy/core/_methods.py:80: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -100,8 +90,10 @@
     "day_interval = [5,10,20,30,63,126,252]\n",
     "#---------------------------------------\n",
     "# specify the signal list. The signal name MUST align with the column name corresponds to that signal\n",
-    "signal_list = [\"up_sma_5_30\",\"down_sma_5_30\",\"up_sma_50_200\",\"down_sma_50_200\",\"up_ema_12_26\",\n",
-    "               \"down_ema_12_26\",\"up_macd\",\"down_macd\",\"up_dema_21_55\",\"down_dema_21_55\",\"up_hma_30\",\"down_hma_30\"\n",
+    "# signal_list = [\"sma_up_5_30\",\"sma_down_5_30\",\"sma_up_50_200\",\"sma_down_50_200\",\"ema_up_12_26\",\"ema_down_12_26\",\"macd_up\",\"macd_down\",\n",
+    "#                \"dema_up_21_55\",\"dema_down_21_55\"\n",
+    "#                ]\n",
+    "signal_list = [\"psar_above\",\"psar_below\",\"adx_up\",\"adx_down\"\n",
     "               ]\n",
     "#---------------------------------------\n",
     "# The following inputs form the threshold to sift strong signals.\n",
@@ -130,7 +122,7 @@
     "# higher than 1.3 or lower than 0.7\n",
     "\n",
     "output_dir = \"\"\n",
-    "output_file_name = \"AAPL_Stats_mean_0.1\"\n",
+    "output_file_name = \"YHOO_High_indicators_mean_0.1\"\n",
     "sc.export_summary_table(day_interval,df_yhoo_rv10,signal_list,\"close\",output_dir,output_file_name,\n",
     "                    target_stats,target_day_interval,n_dict,min_chg)\n",
     "\n",
@@ -139,18 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-533167ec8934>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhelp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexport_summary_table\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'sc' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function export_summary_table in module Stats_Collector:\n",
+      "\n",
+      "export_summary_table(day_interval, df_tia, signal_col_list, target_col, dir_path, filename, target_stats_list, target_day_intervals, n, threshold)\n",
+      "\n"
      ]
     }
    ],
