--- a/notebooks/team1/lini/0403-Backtesting-Scored.ipynb
+++ b/notebooks/team1/lini/0403-Backtesting-Scored.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,9 +176,9 @@
     "    \n",
     "    def sort_return2(self, nums):\n",
     "        \"\"\"sort return in the past n_i days in ascending order \n",
-    "           For each stock, its rank @ n_i is their score\n",
-    "           For each stock, its cumulative score = sum of score @ n_i for all i\n",
-    "           return the bottom and top 3 score stocks \"\"\"\n",
+    "           For each stock, its rank @ n_i is the score_i\n",
+    "           For each stock, its cumulative score = sum of score_i for all i\n",
+    "           return the bottom and top 3 scored stocks \"\"\"\n",
     "        \n",
     "        n = len(nums)\n",
     "        snum = len(symbols)\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,13 @@
       "2014-06-16, regime = momentum,       HAS Position at ,  and  at  \n",
       "2014-06-16, regime = momentum,       CREATE SELL for XLP XLF XLY,  BUY  for XLP XLF XLY\n",
       "2014-06-17, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLP XLY\n",
-      "2014-06-18, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLP XLY\n",
+      "2014-06-18, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLP XLY\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2014-06-19, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLP XLY\n",
       "2014-06-20, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLP XLY\n",
       "2014-06-23, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLP XLY\n",
@@ -484,13 +490,7 @@
       "2014-08-28, regime = momentum,       HAS Position at XLB XLF XLK,  and  at  XLP XLV XLY\n",
       "2014-08-29, regime = momentum,       HAS Position at XLB XLF XLK,  and  at  XLP XLV XLY\n",
       "2014-09-02, regime = momentum,       HAS Position at XLB XLF XLK,  and  at  XLP XLV XLY\n",
-      "2014-09-03, regime = momentum,       HAS Position at XLB XLF XLK,  and  at  XLP XLV XLY\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2014-09-03, regime = momentum,       HAS Position at XLB XLF XLK,  and  at  XLP XLV XLY\n",
       "2014-09-04, regime = momentum,       HAS Position at XLB XLF XLK,  and  at  XLP XLV XLY\n",
       "2014-09-05, regime = momentum,       HAS Position at XLB XLF XLK,  and  at  XLP XLV XLY\n",
       "2014-09-08, regime = momentum,       HAS Position at XLB XLF XLK,  and  at  XLP XLV XLY\n",
@@ -529,7 +529,13 @@
       "2014-10-17, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLU XLV XLY\n",
       "2014-10-20, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLU XLV XLY\n",
       "2014-10-21, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLU XLV XLY\n",
-      "2014-10-22, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLU XLV XLY\n",
+      "2014-10-22, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLU XLV XLY\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2014-10-23, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLU XLV XLY\n",
       "2014-10-24, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLU XLV XLY\n",
       "2014-10-27, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLU XLV XLY\n",
@@ -635,13 +641,7 @@
       "2015-03-09, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLP XLU XLV\n",
       "2015-03-10, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLP XLU XLV\n",
       "2015-03-10, regime = momentum,       CLOSE Position  XLB XLE XLI,  and for  XLP XLU XLV\n",
-      "2015-03-11, regime = momentum,       HAS Position at ,  and  at  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2015-03-11, regime = momentum,       HAS Position at ,  and  at  \n",
       "2015-03-11, regime = momentum,       CREATE SELL for XLE XLB XLU,  BUY  for XLE XLB XLU\n",
       "2015-03-12, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLU XLV XLY\n",
       "2015-03-13, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLU XLV XLY\n",
@@ -723,7 +723,13 @@
       "2015-06-23, regime = momentum,       HAS Position at XLE XLI XLK,  and  at  XLU XLV XLY\n",
       "2015-06-24, regime = momentum,       HAS Position at XLE XLI XLK,  and  at  XLU XLV XLY\n",
       "2015-06-25, regime = momentum,       HAS Position at XLE XLI XLK,  and  at  XLU XLV XLY\n",
-      "2015-06-26, regime = momentum,       HAS Position at XLE XLI XLK,  and  at  XLU XLV XLY\n",
+      "2015-06-26, regime = momentum,       HAS Position at XLE XLI XLK,  and  at  XLU XLV XLY\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2015-06-29, regime = momentum,       HAS Position at XLE XLI XLK,  and  at  XLU XLV XLY\n",
       "2015-06-30, regime = momentum,       HAS Position at XLE XLI XLK,  and  at  XLU XLV XLY\n",
       "2015-07-01, regime = momentum,       HAS Position at XLE XLI XLK,  and  at  XLU XLV XLY\n",
@@ -786,13 +792,7 @@
       "2015-09-10, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLP XLV XLY\n",
       "2015-09-11, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLP XLV XLY\n",
       "2015-09-14, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLP XLV XLY\n",
-      "2015-09-15, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLP XLV XLY\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2015-09-15, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLP XLV XLY\n",
       "2015-09-16, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLP XLV XLY\n",
       "2015-09-17, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLP XLV XLY\n",
       "2015-09-18, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLP XLV XLY\n",
@@ -909,7 +909,13 @@
       "2016-02-02, regime = mean reversion,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
       "2016-02-02, regime = mean reversion, CLOSE Position  XLB XLE XLF,  and for  XLP XLU XLV\n",
       "2016-02-02, regime = mean reversion,       CLOSE Position  XLB XLE XLF,  and for  XLP XLU XLV\n",
-      "2016-02-03, regime = mean reversion,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
+      "2016-02-03, regime = mean reversion,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2016-02-04, regime = mean reversion,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
       "2016-02-05, regime = mean reversion,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
       "2016-02-08, regime = mean reversion,       HAS Position at XLB XLE XLF,  and  at  XLP XLU XLV\n",
@@ -936,13 +942,7 @@
       "2016-03-02, regime = momentum, CLOSE Position  XLB XLE XLF,  and for  XLI XLU XLV\n",
       "2016-03-03, regime = momentum,       HAS Position at ,  and  at  \n",
       "2016-03-03, regime = momentum,       CREATE SELL for XLE XLB XLF,  BUY  for XLE XLB XLF\n",
-      "2016-03-04, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2016-03-04, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n",
       "2016-03-07, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n",
       "2016-03-08, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n",
       "2016-03-09, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n",
@@ -1071,13 +1071,7 @@
       "2016-08-08, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLU XLY\n",
       "2016-08-09, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLU XLY\n",
       "2016-08-10, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLU XLY\n",
-      "2016-08-11, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLU XLY\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2016-08-11, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLU XLY\n",
       "2016-08-12, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLU XLY\n",
       "2016-08-15, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLU XLY\n",
       "2016-08-16, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLI XLU XLY\n",
@@ -1108,7 +1102,13 @@
       "2016-09-19, regime = mean reversion,       HAS Position at XLB XLF XLI,  and  at  XLU XLV XLY\n",
       "2016-09-19, regime = mean reversion,       CLOSE Position  XLB XLF XLI,  and for  XLU XLV XLY\n",
       "2016-09-20, regime = momentum,       HAS Position at ,  and  at  \n",
-      "2016-09-20, regime = momentum,       CREATE SELL for XLY XLV XLP,  BUY  for XLY XLV XLP\n",
+      "2016-09-20, regime = momentum,       CREATE SELL for XLY XLV XLP,  BUY  for XLY XLV XLP\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2016-09-21, regime = momentum,       HAS Position at XLF XLK XLP,  and  at  XLU XLV XLY\n",
       "2016-09-22, regime = momentum,       HAS Position at XLF XLK XLP,  and  at  XLU XLV XLY\n",
       "2016-09-23, regime = momentum,       HAS Position at XLF XLK XLP,  and  at  XLU XLV XLY\n",
@@ -1204,7 +1204,13 @@
       "2017-01-17, regime = mean reversion,       HAS Position at XLE XLF XLI,  and  at  XLP XLU XLV\n",
       "2017-01-17, regime = mean reversion,       CLOSE Position  XLE XLF XLI,  and for  XLP XLU XLV\n",
       "2017-01-18, regime = momentum,       HAS Position at ,  and  at  \n",
-      "2017-01-18, regime = momentum,       CREATE SELL for XLP XLV XLU,  BUY  for XLP XLV XLU\n",
+      "2017-01-18, regime = momentum,       CREATE SELL for XLP XLV XLU,  BUY  for XLP XLV XLU\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2017-01-19, regime = momentum,       HAS Position at XLE XLF XLK,  and  at  XLP XLU XLV\n",
       "2017-01-20, regime = momentum,       HAS Position at XLE XLF XLK,  and  at  XLP XLU XLV\n",
       "2017-01-23, regime = momentum,       HAS Position at XLE XLF XLK,  and  at  XLP XLU XLV\n",
@@ -1227,13 +1233,7 @@
       "2017-02-15, regime = momentum,       HAS Position at XLE XLF XLK,  and  at  XLP XLU XLV\n",
       "2017-02-15, regime = momentum,       CLOSE Position  XLE XLF XLK,  and for  XLP XLU XLV\n",
       "2017-02-16, regime = momentum,       HAS Position at ,  and  at  \n",
-      "2017-02-16, regime = momentum,       CREATE SELL for XLP XLU XLV,  BUY  for XLP XLU XLV\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2017-02-16, regime = momentum,       CREATE SELL for XLP XLU XLV,  BUY  for XLP XLU XLV\n",
       "2017-02-17, regime = momentum,       HAS Position at XLF XLI XLK,  and  at  XLP XLU XLV\n",
       "2017-02-21, regime = momentum,       HAS Position at XLF XLI XLK,  and  at  XLP XLU XLV\n",
       "2017-02-22, regime = momentum,       HAS Position at XLF XLI XLK,  and  at  XLP XLU XLV\n",
@@ -1308,7 +1308,13 @@
       "2017-05-22, regime = momentum,       HAS Position at ,  and  at  \n",
       "2017-05-22, regime = momentum,       CREATE SELL for XLE XLV XLP,  BUY  for XLE XLV XLP\n",
       "2017-05-23, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
-      "2017-05-24, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
+      "2017-05-24, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2017-05-25, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
       "2017-05-26, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
       "2017-05-30, regime = momentum,       HAS Position at XLE XLF XLI,  and  at  XLK XLP XLV\n",
@@ -1386,13 +1392,7 @@
       "2017-08-29, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n",
       "2017-08-30, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n",
       "2017-08-31, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n",
-      "2017-09-01, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2017-09-01, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n",
       "2017-09-05, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n",
       "2017-09-06, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n",
       "2017-09-07, regime = momentum,       HAS Position at XLB XLE XLF,  and  at  XLK XLP XLU\n",
@@ -1412,7 +1412,13 @@
       "2017-09-25, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
       "2017-09-26, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
       "2017-09-27, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
-      "2017-09-28, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
+      "2017-09-28, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2017-09-29, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
       "2017-10-02, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
       "2017-10-03, regime = momentum,       HAS Position at XLB XLE XLK,  and  at  XLP XLV XLY\n",
@@ -1510,7 +1516,13 @@
       "2018-01-31, regime = momentum,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLU\n",
       "2018-02-01, regime = mean reversion,       HAS Position at XLB XLE XLI,  and  at  XLK XLP XLU\n",
       "2018-02-01, regime = mean reversion,       CLOSE Position  XLB XLE XLI,  and for  XLK XLP XLU\n",
-      "2018-02-02, regime = mean reversion,       HAS Position at ,  and  at  \n",
+      "2018-02-02, regime = mean reversion,       HAS Position at ,  and  at  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2018-02-02, regime = mean reversion, CREATE BUY  for XLU XLE XLB,  SELL for XLU XLE XLB\n",
       "2018-02-05, regime = mean reversion,       HAS Position at XLB XLE XLF,  and  at  XLU XLV XLY\n",
       "2018-02-06, regime = mean reversion,       HAS Position at XLB XLE XLF,  and  at  XLU XLV XLY\n",
@@ -1753,7 +1765,7 @@
     "    # print('cpnl = ', cpnl)\n",
     "    df['cumulative_pnl'].iloc[t] = cpnl\n",
     "    \n",
-    "print(df)\n",
+    "\n",
     "\n",
     "    "
    ]
