--- a/notebooks/team1/lini/0326-Backtesting.ipynb
+++ b/notebooks/team1/lini/0326-Backtesting.ipynb
@@ -140,6 +140,8 @@
     "        self.mrr = 0.02\n",
     "        self.mor = 0.05\n",
     "        self.signal_data = self.read_signals()\n",
+    "        self.sma = bt.indicators.SimpleMovingAverage(\n",
+    "            self.datas[0], period=self.params.period) \n",
     "        \n",
     "\n",
     "        \n",
@@ -296,147 +298,8 @@
      "output_type": "stream",
      "text": [
       "Starting Portfolio Value: 100000.00\n",
-      "2013-02-11, Close, 1517.01\n",
-      "2013-02-11, SELL CREATE, 1517.01\n",
-      "2013-02-12, Close, 1519.43\n",
-      "2013-02-13, Close, 1520.33\n",
-      "2013-02-14, Close, 1521.38\n",
-      "2013-02-15, Close, 1519.79\n",
-      "2013-02-19, Close, 1530.94\n",
-      "2013-02-20, Close, 1511.95\n",
-      "2013-02-21, Close, 1502.42\n",
-      "2013-02-22, Close, 1515.60\n",
-      "2013-02-25, Close, 1487.85\n",
-      "2013-02-26, Close, 1496.94\n",
-      "2013-02-27, Close, 1515.99\n",
-      "2013-02-28, Close, 1514.68\n",
-      "2013-03-01, Close, 1518.20\n",
-      "2013-03-04, Close, 1525.20\n",
-      "2013-03-05, Close, 1539.79\n",
-      "2013-03-06, Close, 1541.46\n",
-      "2013-03-07, Close, 1544.26\n",
-      "2013-03-08, Close, 1551.18\n",
-      "2013-03-11, Close, 1556.22\n",
-      "2013-03-12, Close, 1552.48\n",
-      "2013-03-12, Close poition---BUY EMPTY, 1552.48\n",
-      "2013-03-13, Close, 1554.52\n",
-      "2013-03-13, SELL CREATE, 1554.52\n",
-      "2013-03-14, Close, 1563.23\n",
-      "2013-03-15, Close, 1560.70\n",
-      "2013-03-18, Close, 1552.10\n",
-      "2013-03-19, Close, 1548.34\n",
-      "2013-03-20, Close, 1558.71\n",
-      "2013-03-21, Close, 1545.80\n",
-      "2013-03-22, Close, 1556.89\n",
-      "2013-03-25, Close, 1551.69\n",
-      "2013-03-26, Close, 1563.77\n",
-      "2013-03-27, Close, 1562.85\n",
-      "2013-03-28, Close, 1569.19\n",
-      "2013-04-01, Close, 1562.17\n",
-      "2013-04-02, Close, 1570.25\n",
-      "2013-04-03, Close, 1553.69\n",
-      "2013-04-04, Close, 1559.98\n",
-      "2013-04-05, Close, 1553.28\n",
-      "2013-04-08, Close, 1563.07\n",
-      "2013-04-09, Close, 1568.61\n",
-      "2013-04-10, Close, 1587.73\n",
-      "2013-04-11, Close, 1593.37\n",
-      "2013-04-11, Close poition---BUY EMPTY, 1593.37\n",
-      "2013-04-12, Close, 1588.85\n",
-      "2013-04-12, SELL CREATE, 1588.85\n",
-      "2013-04-15, Close, 1552.36\n",
-      "2013-04-16, Close, 1574.57\n",
-      "2013-04-17, Close, 1552.01\n",
-      "2013-04-18, Close, 1541.61\n",
-      "2013-04-19, Close, 1555.25\n",
-      "2013-04-22, Close, 1562.50\n",
-      "2013-04-23, Close, 1578.78\n",
-      "2013-04-24, Close, 1578.79\n",
-      "2013-04-25, Close, 1585.16\n",
-      "2013-04-26, Close, 1582.24\n",
-      "2013-04-29, Close, 1593.61\n",
-      "2013-04-30, Close, 1597.57\n",
-      "2013-05-01, Close, 1582.70\n",
-      "2013-05-02, Close, 1597.59\n",
-      "2013-05-03, Close, 1614.42\n",
-      "2013-05-06, Close, 1617.50\n",
-      "2013-05-07, Close, 1625.96\n",
-      "2013-05-08, Close, 1632.69\n",
-      "2013-05-09, Close, 1626.67\n",
-      "2013-05-10, Close, 1633.70\n",
-      "2013-05-10, Close poition---BUY EMPTY, 1633.70\n",
-      "2013-05-13, Close, 1633.77\n",
-      "2013-05-13, SELL CREATE, 1633.77\n",
-      "2013-05-14, Close, 1650.34\n",
-      "2013-05-15, Close, 1658.78\n",
-      "2013-05-16, Close, 1650.47\n",
-      "2013-05-17, Close, 1667.47\n",
-      "2013-05-20, Close, 1666.29\n",
-      "2013-05-21, Close, 1669.16\n",
-      "2013-05-22, Close, 1655.35\n",
-      "2013-05-23, Close, 1650.51\n",
-      "2013-05-24, Close, 1649.60\n",
-      "2013-05-28, Close, 1660.06\n",
-      "2013-05-29, Close, 1648.36\n",
-      "2013-05-30, Close, 1654.41\n",
-      "2013-05-31, Close, 1630.74\n",
-      "2013-06-03, Close, 1640.42\n",
-      "2013-06-04, Close, 1631.38\n",
-      "2013-06-05, Close, 1608.90\n",
-      "2013-06-06, Close, 1622.56\n",
-      "2013-06-07, Close, 1643.38\n",
-      "2013-06-10, Close, 1642.81\n",
-      "2013-06-11, Close, 1626.13\n",
-      "2013-06-11, Close poition---BUY EMPTY, 1626.13\n",
-      "2013-06-12, Close, 1612.52\n",
-      "2013-06-12, SELL CREATE, 1612.52\n",
-      "2013-06-13, Close, 1636.36\n",
-      "2013-06-14, Close, 1626.73\n",
-      "2013-06-17, Close, 1639.04\n",
-      "2013-06-18, Close, 1651.81\n",
-      "2013-06-19, Close, 1628.93\n",
-      "2013-06-20, Close, 1588.19\n",
-      "2013-06-21, Close, 1592.43\n",
-      "2013-06-24, Close, 1573.09\n",
-      "2013-06-25, Close, 1588.03\n",
-      "2013-06-26, Close, 1603.26\n",
-      "2013-06-27, Close, 1613.20\n",
-      "2013-06-28, Close, 1606.28\n",
-      "2013-07-01, Close, 1614.96\n",
-      "2013-07-02, Close, 1614.08\n",
-      "2013-07-03, Close, 1615.41\n",
-      "2013-07-05, Close, 1631.89\n",
-      "2013-07-08, Close, 1640.46\n",
-      "2013-07-09, Close, 1652.32\n",
-      "2013-07-10, Close, 1652.62\n",
-      "2013-07-11, Close, 1675.02\n",
-      "2013-07-11, Close poition---BUY EMPTY, 1675.02\n",
-      "2013-07-12, Close, 1680.19\n",
-      "2013-07-12, SELL CREATE, 1680.19\n",
-      "2013-07-15, Close, 1682.50\n",
-      "2013-07-16, Close, 1676.26\n",
-      "2013-07-17, Close, 1680.91\n",
-      "2013-07-18, Close, 1689.37\n",
-      "2013-07-19, Close, 1692.09\n",
-      "2013-07-22, Close, 1695.53\n",
-      "2013-07-23, Close, 1692.39\n",
-      "2013-07-24, Close, 1685.94\n",
-      "2013-07-25, Close, 1690.25\n",
-      "2013-07-26, Close, 1691.65\n",
-      "2013-07-29, Close, 1685.33\n",
-      "2013-07-30, Close, 1685.96\n",
-      "2013-07-31, Close, 1685.73\n",
-      "2013-08-01, Close, 1706.87\n",
-      "2013-08-02, Close, 1709.67\n",
-      "2013-08-05, Close, 1707.14\n",
-      "2013-08-06, Close, 1697.37\n",
-      "2013-08-07, Close, 1690.91\n",
-      "2013-08-08, Close, 1697.48\n",
-      "2013-08-09, Close, 1691.42\n",
-      "2013-08-09, Close poition---BUY EMPTY, 1691.42\n",
-      "2013-08-12, Close, 1689.47\n",
-      "2013-08-12, BUY CREATE, 1689.47\n",
       "2013-08-13, Close, 1694.16\n",
+      "2013-08-13, BUY CREATE, 1694.16\n",
       "2013-08-14, Close, 1685.39\n",
       "2013-08-15, Close, 1661.32\n",
       "2013-08-16, Close, 1655.83\n",
@@ -456,10 +319,10 @@
       "2013-09-06, Close, 1655.17\n",
       "2013-09-09, Close, 1671.71\n",
       "2013-09-10, Close, 1683.99\n",
-      "2013-09-10, Close poition---SELL EMPTY, 1683.99\n",
       "2013-09-11, Close, 1689.13\n",
-      "2013-09-11, BUY CREATE, 1689.13\n",
+      "2013-09-11, Close poition---SELL EMPTY, 1689.13\n",
       "2013-09-12, Close, 1683.42\n",
+      "2013-09-12, BUY CREATE, 1683.42\n",
       "2013-09-13, Close, 1687.99\n",
       "2013-09-16, Close, 1697.60\n",
       "2013-09-17, Close, 1704.76\n",
@@ -479,10 +342,10 @@
       "2013-10-07, Close, 1676.12\n",
       "2013-10-08, Close, 1655.45\n",
       "2013-10-09, Close, 1656.40\n",
-      "2013-10-09, Close poition---SELL EMPTY, 1656.40\n",
       "2013-10-10, Close, 1692.56\n",
-      "2013-10-10, BUY CREATE, 1692.56\n",
+      "2013-10-10, Close poition---SELL EMPTY, 1692.56\n",
       "2013-10-11, Close, 1703.20\n",
+      "2013-10-11, BUY CREATE, 1703.20\n",
       "2013-10-14, Close, 1710.14\n",
       "2013-10-15, Close, 1698.06\n",
       "2013-10-16, Close, 1721.54\n",
@@ -502,10 +365,10 @@
       "2013-11-05, Close, 1762.97\n",
       "2013-11-06, Close, 1770.49\n",
       "2013-11-07, Close, 1747.15\n",
-      "2013-11-07, Close poition---SELL EMPTY, 1747.15\n",
       "2013-11-08, Close, 1770.61\n",
-      "2013-11-08, BUY CREATE, 1770.61\n",
+      "2013-11-08, Close poition---SELL EMPTY, 1770.61\n",
       "2013-11-11, Close, 1771.89\n",
+      "2013-11-11, BUY CREATE, 1771.89\n",
       "2013-11-12, Close, 1767.69\n",
       "2013-11-13, Close, 1782.00\n",
       "2013-11-14, Close, 1790.62\n",
@@ -525,10 +388,10 @@
       "2013-12-05, Close, 1785.03\n",
       "2013-12-06, Close, 1805.09\n",
       "2013-12-09, Close, 1808.37\n",
-      "2013-12-09, Close poition---SELL EMPTY, 1808.37\n",
       "2013-12-10, Close, 1802.62\n",
-      "2013-12-10, BUY CREATE, 1802.62\n",
+      "2013-12-10, Close poition---SELL EMPTY, 1802.62\n",
       "2013-12-11, Close, 1782.22\n",
+      "2013-12-11, BUY CREATE, 1782.22\n",
       "2013-12-12, Close, 1775.50\n",
       "2013-12-13, Close, 1775.32\n",
       "2013-12-16, Close, 1786.54\n",
@@ -548,10 +411,10 @@
       "2014-01-07, Close, 1837.88\n",
       "2014-01-08, Close, 1837.49\n",
       "2014-01-09, Close, 1838.13\n",
-      "2014-01-09, Close poition---SELL EMPTY, 1838.13\n",
       "2014-01-10, Close, 1842.37\n",
-      "2014-01-10, BUY CREATE, 1842.37\n",
+      "2014-01-10, Close poition---SELL EMPTY, 1842.37\n",
       "2014-01-13, Close, 1819.20\n",
+      "2014-01-13, BUY CREATE, 1819.20\n",
       "2014-01-14, Close, 1838.88\n",
       "2014-01-15, Close, 1848.38\n",
       "2014-01-16, Close, 1845.89\n",
@@ -571,10 +434,10 @@
       "2014-02-06, Close, 1773.43\n",
       "2014-02-07, Close, 1797.02\n",
       "2014-02-10, Close, 1799.84\n",
-      "2014-02-10, Close poition---SELL EMPTY, 1799.84\n",
       "2014-02-11, Close, 1819.75\n",
-      "2014-02-11, BUY CREATE, 1819.75\n",
+      "2014-02-11, Close poition---SELL EMPTY, 1819.75\n",
       "2014-02-12, Close, 1819.26\n",
+      "2014-02-12, BUY CREATE, 1819.26\n",
       "2014-02-13, Close, 1829.83\n",
       "2014-02-14, Close, 1838.63\n",
       "2014-02-18, Close, 1840.76\n",
@@ -594,10 +457,10 @@
       "2014-03-10, Close, 1877.17\n",
       "2014-03-11, Close, 1867.63\n",
       "2014-03-12, Close, 1868.20\n",
-      "2014-03-12, Close poition---SELL EMPTY, 1868.20\n",
       "2014-03-13, Close, 1846.34\n",
-      "2014-03-13, BUY CREATE, 1846.34\n",
+      "2014-03-13, Close poition---SELL EMPTY, 1846.34\n",
       "2014-03-14, Close, 1841.13\n",
+      "2014-03-14, BUY CREATE, 1841.13\n",
       "2014-03-17, Close, 1858.83\n",
       "2014-03-18, Close, 1872.25\n",
       "2014-03-19, Close, 1860.77\n",
@@ -617,10 +480,10 @@
       "2014-04-08, Close, 1851.96\n",
       "2014-04-09, Close, 1872.18\n",
       "2014-04-10, Close, 1833.08\n",
-      "2014-04-10, Close poition---SELL EMPTY, 1833.08\n",
       "2014-04-11, Close, 1815.69\n",
-      "2014-04-11, BUY CREATE, 1815.69\n",
+      "2014-04-11, Close poition---SELL EMPTY, 1815.69\n",
       "2014-04-14, Close, 1830.61\n",
+      "2014-04-14, BUY CREATE, 1830.61\n",
       "2014-04-15, Close, 1842.98\n",
       "2014-04-16, Close, 1862.31\n",
       "2014-04-17, Close, 1864.85\n",
@@ -640,10 +503,10 @@
       "2014-05-08, Close, 1875.63\n",
       "2014-05-09, Close, 1878.48\n",
       "2014-05-12, Close, 1896.65\n",
-      "2014-05-12, Close poition---SELL EMPTY, 1896.65\n",
       "2014-05-13, Close, 1897.45\n",
-      "2014-05-13, BUY CREATE, 1897.45\n",
+      "2014-05-13, Close poition---SELL EMPTY, 1897.45\n",
       "2014-05-14, Close, 1888.53\n",
+      "2014-05-14, BUY CREATE, 1888.53\n",
       "2014-05-15, Close, 1870.85\n",
       "2014-05-16, Close, 1877.86\n",
       "2014-05-19, Close, 1885.08\n",
@@ -663,10 +526,10 @@
       "2014-06-09, Close, 1951.27\n",
       "2014-06-10, Close, 1950.79\n",
       "2014-06-11, Close, 1943.89\n",
-      "2014-06-11, Close poition---SELL EMPTY, 1943.89\n",
       "2014-06-12, Close, 1930.11\n",
-      "2014-06-12, BUY CREATE, 1930.11\n",
+      "2014-06-12, Close poition---SELL EMPTY, 1930.11\n",
       "2014-06-13, Close, 1936.16\n",
+      "2014-06-13, BUY CREATE, 1936.16\n",
       "2014-06-16, Close, 1937.78\n",
       "2014-06-17, Close, 1941.99\n",
       "2014-06-18, Close, 1956.98\n",
@@ -686,10 +549,10 @@
       "2014-07-09, Close, 1972.83\n",
       "2014-07-10, Close, 1964.68\n",
       "2014-07-11, Close, 1967.57\n",
-      "2014-07-11, Close poition---SELL EMPTY, 1967.57\n",
       "2014-07-14, Close, 1977.10\n",
-      "2014-07-14, BUY CREATE, 1977.10\n",
+      "2014-07-14, Close poition---SELL EMPTY, 1977.10\n",
       "2014-07-15, Close, 1973.28\n",
+      "2014-07-15, BUY CREATE, 1973.28\n",
       "2014-07-16, Close, 1981.57\n",
       "2014-07-17, Close, 1958.12\n",
       "2014-07-18, Close, 1978.22\n",
@@ -709,10 +572,10 @@
       "2014-08-07, Close, 1909.57\n",
       "2014-08-08, Close, 1931.59\n",
       "2014-08-11, Close, 1936.92\n",
-      "2014-08-11, Close poition---SELL EMPTY, 1936.92\n",
       "2014-08-12, Close, 1933.75\n",
-      "2014-08-12, BUY CREATE, 1933.75\n",
+      "2014-08-12, Close poition---SELL EMPTY, 1933.75\n",
       "2014-08-13, Close, 1946.72\n",
+      "2014-08-13, BUY CREATE, 1946.72\n",
       "2014-08-14, Close, 1955.18\n",
       "2014-08-15, Close, 1955.06\n",
       "2014-08-18, Close, 1971.74\n",
@@ -732,10 +595,10 @@
       "2014-09-08, Close, 2001.54\n",
       "2014-09-09, Close, 1988.44\n",
       "2014-09-10, Close, 1995.69\n",
-      "2014-09-10, Close poition---SELL EMPTY, 1995.69\n",
       "2014-09-11, Close, 1997.45\n",
-      "2014-09-11, BUY CREATE, 1997.45\n",
+      "2014-09-11, Close poition---SELL EMPTY, 1997.45\n",
       "2014-09-12, Close, 1985.54\n",
+      "2014-09-12, BUY CREATE, 1985.54\n",
       "2014-09-15, Close, 1984.13\n",
       "2014-09-16, Close, 1998.98\n",
       "2014-09-17, Close, 2001.57\n",
@@ -755,8 +618,8 @@
       "2014-10-07, Close, 1935.10\n",
       "2014-10-08, Close, 1968.89\n",
       "2014-10-09, Close, 1928.21\n",
-      "2014-10-09, Close poition---SELL EMPTY, 1928.21\n",
       "2014-10-10, Close, 1906.13\n",
+      "2014-10-10, Close poition---SELL EMPTY, 1906.13\n",
       "2014-10-13, Close, 1874.74\n",
       "2014-10-14, Close, 1877.70\n",
       "2014-10-15, Close, 1862.49\n",
@@ -814,7 +677,13 @@
       "2014-12-22, Close, 2078.54\n",
       "2014-12-23, Close, 2082.17\n",
       "2014-12-24, Close, 2081.88\n",
-      "2014-12-26, Close, 2088.77\n",
+      "2014-12-26, Close, 2088.77\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2014-12-29, Close, 2090.57\n",
       "2014-12-30, Close, 2080.35\n",
       "2014-12-30, Close poition---SELL EMPTY, 2080.35\n",
@@ -1155,7 +1024,13 @@
       "2016-03-11, Close, 2022.19\n",
       "2016-03-14, Close, 2019.64\n",
       "2016-03-15, Close, 2015.93\n",
-      "2016-03-16, Close, 2027.22\n",
+      "2016-03-16, Close, 2027.22\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2016-03-17, Close, 2040.59\n",
       "2016-03-17, SELL CREATE, 2040.59\n",
       "2016-03-18, Close, 2049.58\n",
@@ -1503,7 +1378,13 @@
       "2017-06-08, Close, 2433.79\n",
       "2017-06-08, Close poition---SELL EMPTY, 2433.79\n",
       "2017-06-09, Close, 2431.77\n",
-      "2017-06-12, Close, 2429.39\n",
+      "2017-06-12, Close, 2429.39\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2017-06-12, BUY CREATE, 2429.39\n",
       "2017-06-13, Close, 2440.35\n",
       "2017-06-14, Close, 2437.92\n",
@@ -1693,7 +1574,7 @@
       "2018-02-08, Close, 2581.00\n",
       "2018-02-08, BUY CREATE, 2581.00\n",
       "2018-02-09, Close, 2619.55\n",
-      "Final Portfolio Value: 100979.89\n"
+      "Final Portfolio Value: 101216.82\n"
      ]
     }
    ],
