--- a/notebooks/team1/lini/0327-Verify-Mean-Reversion.ipynb
+++ b/notebooks/team1/lini/0327-Verify-Mean-Reversion.ipynb
@@ -125,6 +125,8 @@
     "        self.mrr = 0.02\n",
     "        self.mor = 0.05\n",
     "        self.signal_data = self.read_signals()\n",
+    "        self.sma = bt.indicators.SimpleMovingAverage(\n",
+    "            self.datas[0], period=self.params.period) \n",
     "        \n",
     "        \n",
     "\n",
@@ -235,133 +237,6 @@
      "output_type": "stream",
      "text": [
       "Starting Portfolio Value: 100000.00\n",
-      "2013-02-11, Close, 1517.01\n",
-      "2013-02-12, Close, 1519.43\n",
-      "2013-02-13, Close, 1520.33\n",
-      "2013-02-14, Close, 1521.38\n",
-      "2013-02-15, Close, 1519.79\n",
-      "2013-02-19, Close, 1530.94\n",
-      "2013-02-20, Close, 1511.95\n",
-      "2013-02-21, Close, 1502.42\n",
-      "2013-02-22, Close, 1515.60\n",
-      "2013-02-25, Close, 1487.85\n",
-      "2013-02-26, Close, 1496.94\n",
-      "2013-02-27, Close, 1515.99\n",
-      "2013-02-28, Close, 1514.68\n",
-      "2013-03-01, Close, 1518.20\n",
-      "2013-03-04, Close, 1525.20\n",
-      "2013-03-05, Close, 1539.79\n",
-      "2013-03-06, Close, 1541.46\n",
-      "2013-03-07, Close, 1544.26\n",
-      "2013-03-08, Close, 1551.18\n",
-      "2013-03-11, Close, 1556.22\n",
-      "2013-03-12, Close, 1552.48\n",
-      "2013-03-13, Close, 1554.52\n",
-      "2013-03-14, Close, 1563.23\n",
-      "2013-03-15, Close, 1560.70\n",
-      "2013-03-18, Close, 1552.10\n",
-      "2013-03-19, Close, 1548.34\n",
-      "2013-03-20, Close, 1558.71\n",
-      "2013-03-21, Close, 1545.80\n",
-      "2013-03-22, Close, 1556.89\n",
-      "2013-03-25, Close, 1551.69\n",
-      "2013-03-26, Close, 1563.77\n",
-      "2013-03-27, Close, 1562.85\n",
-      "2013-03-28, Close, 1569.19\n",
-      "2013-04-01, Close, 1562.17\n",
-      "2013-04-02, Close, 1570.25\n",
-      "2013-04-03, Close, 1553.69\n",
-      "2013-04-04, Close, 1559.98\n",
-      "2013-04-05, Close, 1553.28\n",
-      "2013-04-08, Close, 1563.07\n",
-      "2013-04-09, Close, 1568.61\n",
-      "2013-04-10, Close, 1587.73\n",
-      "2013-04-11, Close, 1593.37\n",
-      "2013-04-12, Close, 1588.85\n",
-      "2013-04-15, Close, 1552.36\n",
-      "2013-04-16, Close, 1574.57\n",
-      "2013-04-17, Close, 1552.01\n",
-      "2013-04-18, Close, 1541.61\n",
-      "2013-04-19, Close, 1555.25\n",
-      "2013-04-22, Close, 1562.50\n",
-      "2013-04-23, Close, 1578.78\n",
-      "2013-04-24, Close, 1578.79\n",
-      "2013-04-25, Close, 1585.16\n",
-      "2013-04-26, Close, 1582.24\n",
-      "2013-04-29, Close, 1593.61\n",
-      "2013-04-30, Close, 1597.57\n",
-      "2013-05-01, Close, 1582.70\n",
-      "2013-05-02, Close, 1597.59\n",
-      "2013-05-03, Close, 1614.42\n",
-      "2013-05-06, Close, 1617.50\n",
-      "2013-05-07, Close, 1625.96\n",
-      "2013-05-08, Close, 1632.69\n",
-      "2013-05-09, Close, 1626.67\n",
-      "2013-05-10, Close, 1633.70\n",
-      "2013-05-13, Close, 1633.77\n",
-      "2013-05-14, Close, 1650.34\n",
-      "2013-05-15, Close, 1658.78\n",
-      "2013-05-16, Close, 1650.47\n",
-      "2013-05-17, Close, 1667.47\n",
-      "2013-05-20, Close, 1666.29\n",
-      "2013-05-21, Close, 1669.16\n",
-      "2013-05-22, Close, 1655.35\n",
-      "2013-05-23, Close, 1650.51\n",
-      "2013-05-24, Close, 1649.60\n",
-      "2013-05-28, Close, 1660.06\n",
-      "2013-05-29, Close, 1648.36\n",
-      "2013-05-30, Close, 1654.41\n",
-      "2013-05-31, Close, 1630.74\n",
-      "2013-06-03, Close, 1640.42\n",
-      "2013-06-04, Close, 1631.38\n",
-      "2013-06-05, Close, 1608.90\n",
-      "2013-06-06, Close, 1622.56\n",
-      "2013-06-07, Close, 1643.38\n",
-      "2013-06-10, Close, 1642.81\n",
-      "2013-06-11, Close, 1626.13\n",
-      "2013-06-12, Close, 1612.52\n",
-      "2013-06-13, Close, 1636.36\n",
-      "2013-06-14, Close, 1626.73\n",
-      "2013-06-17, Close, 1639.04\n",
-      "2013-06-18, Close, 1651.81\n",
-      "2013-06-19, Close, 1628.93\n",
-      "2013-06-20, Close, 1588.19\n",
-      "2013-06-21, Close, 1592.43\n",
-      "2013-06-24, Close, 1573.09\n",
-      "2013-06-25, Close, 1588.03\n",
-      "2013-06-26, Close, 1603.26\n",
-      "2013-06-27, Close, 1613.20\n",
-      "2013-06-28, Close, 1606.28\n",
-      "2013-07-01, Close, 1614.96\n",
-      "2013-07-02, Close, 1614.08\n",
-      "2013-07-03, Close, 1615.41\n",
-      "2013-07-05, Close, 1631.89\n",
-      "2013-07-08, Close, 1640.46\n",
-      "2013-07-09, Close, 1652.32\n",
-      "2013-07-10, Close, 1652.62\n",
-      "2013-07-11, Close, 1675.02\n",
-      "2013-07-12, Close, 1680.19\n",
-      "2013-07-15, Close, 1682.50\n",
-      "2013-07-16, Close, 1676.26\n",
-      "2013-07-17, Close, 1680.91\n",
-      "2013-07-18, Close, 1689.37\n",
-      "2013-07-19, Close, 1692.09\n",
-      "2013-07-22, Close, 1695.53\n",
-      "2013-07-23, Close, 1692.39\n",
-      "2013-07-24, Close, 1685.94\n",
-      "2013-07-25, Close, 1690.25\n",
-      "2013-07-26, Close, 1691.65\n",
-      "2013-07-29, Close, 1685.33\n",
-      "2013-07-30, Close, 1685.96\n",
-      "2013-07-31, Close, 1685.73\n",
-      "2013-08-01, Close, 1706.87\n",
-      "2013-08-02, Close, 1709.67\n",
-      "2013-08-05, Close, 1707.14\n",
-      "2013-08-06, Close, 1697.37\n",
-      "2013-08-07, Close, 1690.91\n",
-      "2013-08-08, Close, 1697.48\n",
-      "2013-08-09, Close, 1691.42\n",
-      "2013-08-12, Close, 1689.47\n",
       "2013-08-13, Close, 1694.16\n",
       "2013-08-14, Close, 1685.39\n",
       "2013-08-15, Close, 1661.32\n",
@@ -710,7 +585,13 @@
       "2014-12-22, Close, 2078.54\n",
       "2014-12-23, Close, 2082.17\n",
       "2014-12-24, Close, 2081.88\n",
-      "2014-12-26, Close, 2088.77\n",
+      "2014-12-26, Close, 2088.77\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2014-12-29, Close, 2090.57\n",
       "2014-12-30, Close, 2080.35\n",
       "2014-12-31, Close, 2058.90\n",
@@ -1022,7 +903,13 @@
       "2016-03-02, Close, 1986.45\n",
       "2016-03-02, Close poition---BUY EMPTY, 1986.45\n",
       "2016-03-03, Close, 1993.40\n",
-      "2016-03-04, Close, 1999.99\n",
+      "2016-03-04, Close, 1999.99\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2016-03-07, Close, 2001.76\n",
       "2016-03-08, Close, 1979.26\n",
       "2016-03-09, Close, 1989.26\n",
@@ -1469,7 +1356,13 @@
       "2017-11-15, Close, 2564.62\n",
       "2017-11-16, Close, 2585.64\n",
       "2017-11-17, Close, 2578.85\n",
-      "2017-11-20, Close, 2582.14\n",
+      "2017-11-20, Close, 2582.14\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2017-11-21, Close, 2599.03\n",
       "2017-11-22, Close, 2597.08\n",
       "2017-11-24, Close, 2602.42\n",
@@ -1576,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
